<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars548_process</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="neal@todo.todo">neal</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>ars548_interface</depend>
  <depend>pcl</depend>  <!-- 添加这行 -->  
  <exec_depend>pcl_conversions</exec_depend>  <!-- 添加这行 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
